--- a/Client/package.json
+++ b/Client/package.json
@@ -3,40 +3,58 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "^3.0.1",
-        "web-vitals": "^2.1.4"
+      "@reduxjs/toolkit": "^1.9.5",
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "apexcharts": "^3.41.0",
+      "axios": "^1.4.0",
+      "chart.js": "^4.3.0",
+      "react": "^18.2.0",
+      "react-apexcharts": "^1.4.1",
+      "react-chartjs-2": "^5.2.0",
+      "react-dom": "^18.2.0",
+      "react-icons": "^4.10.1",
+      "react-redux": "^8.1.1",
+      "react-router-dom": "^6.14.0",
+      "react-scripts": "5.0.1",
+      "tw-elements": "^1.0.0-beta2",
+      "web-vitals": "^2.1.4"
+    },
+    "engines": {
+      "node": "18.15.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
     },
     "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
     },
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
     },
     "devDependencies": {
-        "cypress": "^13.6.2",
-        "eslint-plugin-cypress": "^2.15.1"
+      "@cypress/react18": "^2.0.0",
+      "@cypress/webpack-dev-server": "^3.5.2",
+      "autoprefixer": "^10.4.14",
+      "cypress": "^12.17.3",
+      "postcss": "^8.4.24",
+      "tailwindcss": "^3.3.2"
     }
-}
+  }
+  
